# Alaris

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Alaris.md  Alaris.sln  CMakeLists.txt  Claude.md  Directory.Build.props  Dockerfile.lean  Dockerfile.quantlib  FIXES_SUMMARY.md  LICENSE  NAMING-CONVENTION.md  NOTICE  PRODUCTION_ROADMAP.md  Pricing American Options Under Negative Rates.rtf  README.md  TestProbabilities.cs  alaris  appsettings.jsonc  config.json  docker-compose.yml  lean.json  log.txt  rules.md
src/: CMakeLists.txt
src/Alaris.Algorithm/: Alaris.Algorithm.csproj  STLN001A.cs  STUN001A.cs  STUN001B.cs
src/Alaris.Core/: Alaris.Core.csproj
src/Alaris.Core/HotPath/: CRFN001A.cs
src/Alaris.Core/Math/: CRCH001A.cs  CRGQ001A.cs  CRMF001A.cs  CRMF002A.cs
src/Alaris.Core/Model/: STDT010A.cs  STDT011A.cs
src/Alaris.Core/Options/: CROP001A.cs  CROP002A.cs  CROP003A.cs  CROP004A.cs
src/Alaris.Core/Pooling/: CRPL001A.cs
src/Alaris.Core/Pricing/: CRAP001A.cs  CREN001A.cs  CREN002A.cs  CREX001A.cs  CRRE001A.cs  CRSL001A.cs  CRSL002A.cs
src/Alaris.Core/TermStructure/: CRTS001A.cs  CRTS002A.cs
src/Alaris.Core/Time/: CRTM002A.cs  CRTM003A.cs  CRTM004A.cs  CRTM006A.cs  CRTM007A.cs
src/Alaris.Core/Validation/: CRVL001A.cs
src/Alaris.Core/Vectorized/: CRVT001A.cs
src/Alaris.Host/: Alaris.Host.csproj
src/Alaris.Host/Application/: APap001A.cs
src/Alaris.Host/Application/Command/: APcm001A.cs  APcm002A.cs  APcm003A.cs  APcm004A.cs  APcm005A.cs  APcm006A.cs
src/Alaris.Host/Application/Model/: APmd001A.cs
src/Alaris.Host/Application/Service/: APsv001A.cs  APsv002A.cs  APsv002B.cs  APsv003A.cs
src/Alaris.Infrastructure/: Alaris.Infrastructure.csproj  DTsv001A.cs
src/Alaris.Infrastructure/Configuration/: DTcf001A.cs
src/Alaris.Infrastructure/Data/: DTch001A.cs
src/Alaris.Infrastructure/Data/Bridge/: DTbr001A.cs
src/Alaris.Infrastructure/Data/Model/: DTmd001A.cs  DTmd002A.cs  DTmd003A.cs
src/Alaris.Infrastructure/Data/Provider/: DTib005A.cs  DTpr001A.cs  DTpr002A.cs  DTpr004A.cs  DTpr006A.cs  DTrf001A.cs
src/Alaris.Infrastructure/Data/Quality/: DTqc001A.cs
src/Alaris.Infrastructure/Data/Serialization/: DTsr001A.cs
src/Alaris.Infrastructure/Data/Validation/: DTpf001A.cs
src/Alaris.Infrastructure/Events/Core/: EVCR001A.cs  EVCR002A.cs  EVCR003A.cs
src/Alaris.Infrastructure/Events/Infrastructure/: EVIF001A.cs  EVIF001B.cs  EVIF002A.cs  EVIF002B.cs
src/Alaris.Infrastructure/Events/Serialization/: EVsr001A.cs
src/Alaris.Infrastructure/Http/: HTRL001A.cs
src/Alaris.Infrastructure/Protocol/Schemas/: Workflow.xml
src/Alaris.Infrastructure/Protocol/Serialization/: PLSR001A.cs
src/Alaris.Infrastructure/Protocol/Workflow/: PLWF001A.cs
src/Alaris.Simulation/: SMSM001A.cs
src/Alaris.Simulation/Output/Results/: Alaris.Algorithm.STLN001A-summary.json  Alaris.Algorithm.STLN001A.json  failed-data-requests-20251208114240899.txt  succeeded-data-requests-20251208074308512.txt  succeeded-data-requests-20251208114240899.txt
src/Alaris.Strategy/: Alaris.Strategy.csproj
src/Alaris.Strategy/Bridge/: STBR001A.cs
src/Alaris.Strategy/Calendar/: STCL001A.cs
src/Alaris.Strategy/Core/: STCR001A.cs  STCR003A.cs  STCR004A.cs  STDD001A.cs  STEJ001A.cs  STIV001A.cs  STIV002A.cs  STIV003A.cs  STIV005A.cs  STIV006A.cs  STKF001A.cs  STPR003A.cs  STTM001A.cs  STTM002A.cs  STTM004A.cs
src/Alaris.Strategy/Core/Numerical/: STPR002A.cs  STPR002B.cs  STPR002C.cs  STPR004A.cs  STPR005A.cs  STPR007A.cs  STPR010A.cs
src/Alaris.Strategy/Cost/: STCS002A.cs  STCS003A.cs  STCS004A.cs  STCS005A.cs  STCS006A.cs  STCS007A.cs  STCS008A.cs  STCS009A.cs
src/Alaris.Strategy/Detection/: STSD001A.cs
src/Alaris.Strategy/Hedge/: STHD001A.cs  STHD003A.cs  STHD005A.cs  STHD006A.cs  STHD007A.cs  STHD007B.cs
src/Alaris.Strategy/Model/: STDT003A.cs
src/Alaris.Strategy/Pricing/: STPR001A.cs
src/Alaris.Strategy/Risk/: STQT001A.cs  STRK001A.cs  STRK002A.cs  STRK003A.cs  STRK004A.cs
src/Alaris.Strategy/Serialization/: STsr001A.cs
src/Alaris.Test/: Alaris.Test.csproj  Assembly.cs  GlobalSuppressions.cs
src/Alaris.Test/Backtest/: TSBT001A.cs
src/Alaris.Test/Benchmark/: TSBM002A.cs  TSBM003A.cs
src/Alaris.Test/Integration/: TSEE001A.cs  TSIN002A.cs  TSIN003A.cs  TSIN004A.cs  TSIN005A.cs
src/Alaris.Test/Unit/: TSUN004A.cs  TSUN006A.cs  TSUN007A.cs  TSUN008A.cs  TSUN009A.cs  TSUN010A.cs  TSUN013A.cs  TSUN014A.cs  TSUN015A.cs  TSUN016A.cs  TSUN017A.cs  TSUN019A.cs  TSUN020A.cs  TSUN022A.cs  TSUN024A.cs  TSUN026A.cs  TSUN027A.cs  TSUN028A.cs  TSUN029A.cs  TSUN030A.cs  TSUN033A.cs  TSUN051A.cs  TSUN052A.cs  TSUN053A.cs  TSUN054A.cs
src/Alaris.Test/Unit/Core/Math/: CRMF002ATests.cs
src/csharp/: Alaris.Lean.csproj  CMakeLists.txt  Program.cs  config,json
src/csharp/Algorithm/: ArbitrageAlgorithm.cs  DataDownload.cs  DeterministicVolArbitrageAlgorithm.cs
src/csharp/IPC/: MessageTypes.cs  SharedMemoryBridge.cs  SharedRingBuffer.cs
src/csharp/Monitoring/: GCOptimizer.cs  PerformanceMonitor.cs
src/quantlib/: CMakeLists.txt  alaris_build_info.h.in  main.cpp
src/quantlib/core/: event_log.cpp  event_log.h  memory_pool.cpp  memory_pool.h  task_scheduler.cpp  task_scheduler.h  time_trigger.cpp  time_trigger.h  time_type.h
src/quantlib/ipc/: message_types.h  process_manager.cpp  process_manager.h  shared_memory.cpp  shared_memory.h  shared_memory_manager.cpp  shared_ring_buffer.h
src/quantlib/pricing/: alo_engine.cpp  alo_engine.h  pricing_service.cpp  pricing_service.h
src/quantlib/strategy/: signal_gen.cpp  signal_gen.h  vol_arb.cpp  vol_arb.h
src/quantlib/tools/: config.cpp  config_validator.cpp  system_info.cpp
src/quantlib/volatility/: garch_wrapper.cpp  garch_wrapper.h  gjrgarch_wrapper.cpp  gjrgarch_wrapper.h  vol_forecast.cpp  vol_forecast.h
test/: CMakeLists.txt  main_runner.cpp  test_helpers.cpp  test_helpers.h
test/integration/: end_to_end_test.cpp  ipc_integration_test.cpp  strategy_integration_test.cpp
test/ipc/: shared_memory_test.cpp
test/quantlib/: alo_engine_test.cpp  memory_pool_test.cpp  pricing_test.cpp  volatility_test.cpp
(+5871 files in other folders)
